<resources>
    <string name="app_name">Recytechco</string>
    <string name="lbl_sign_up">Not a member? Sign up now.</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_signup">Signup</string>
    <string name="lbl_retype_password">Retype Password</string>
    <string name="message_type_credentials">Type username and password, please.</string>
    <string name="message_wrong_credentials">Username and password combination wrong.</string>
    <string name="lbl_login_here">Already a member? Login Here.</string>
    <string name="lbl_points">Points</string>
    <string name="lbl_element">Element</string>
    <string name="lbl_elements">Elements</string>
    <string name="lbl_number">Am.</string>
    <string name="lbl_place">Place</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_note">Enter the amount of items that you will recycle.</string>
    <string name="lbl_amount">Amount</string>
    <string name="action_recycle">Recycle</string>
    <string name="lbl_my_recycled_elements">My recycled elements</string>
    <string name="message_invalid_credentials">Only numbers and letters are allowed for the username and password.</string>
    <string name="message_type_all_fields">Type all fields.</string>
    <string name="message_user_already_registered">User was already registered.</string>
    <string name="message_passwords_dont_match">The passwords don\'t match.</string>
    <string name="message_success">Success!!</string>
    <string name="lbl_history">History</string>
    <string name="lbl_see_recycling_points">See recycling points</string>
</resources>