<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:maxHeight="20dp"
        android:src="@drawable/recytechco_white_logo" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bottom_border"
        android:hint="@string/lbl_full_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bottom_border"
        android:hint="@string/lbl_username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bottom_border"
        android:hint="@string/lbl_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bottom_border"
        android:hint="@string/lbl_retype_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/light_green"
        android:text="@string/lbl_signup"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/lbl_login_here"
        android:textColor="@color/white"
        android:textStyle="italic" />

</LinearLayout>