<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    android:padding="16dp"
    tools:context="com.example.recytechco.MainActivity">

    <TextView
        android:id="@+id/fullNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Yoyman Castellar" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameTextView"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lbl_points"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pointsValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameTextView"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@id/pointsTextView"
        android:text=" -- "
        tools:text="20" />

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pointsTextView"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:gravity="center_horizontal"
            android:text="@string/lbl_element" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/lbl_number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/lbl_place" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="center_horizontal"
            android:text="@string/lbl_date" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionsLinearLayout"
        android:layout_below="@+id/headerLinearLayout"
        android:layout_marginBottom="16dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/actionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/recycleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/green"
            android:text="@string/action_recycle"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/light_green"
            android:text="@string/lbl_logout"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
